references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/AllocationUsage_Invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:9f803339b56a16b92649a517a8ba06be84a411a0c751f50c1d9cbd3761a9323d
size 1813
